# llmfit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
llmfit/: __init__.py  backends.py  catalog.py  cli.py  fit.py  hardware.py  monitor.py  ollama.py
tests/: test_backends.py  test_catalog.py  test_fit.py  test_hardware.py
