[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmfit"
version = "0.1.0"
description = "Right-size local LLMs for your hardware: find out what your machine can actually run, at what quantization, and how fast."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "tuwfy" }]
keywords = ["llm", "ollama", "local-llm", "hardware", "vram", "quantization", "benchmark", "cli", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/tylrcc/llmfit"
Repository = "https://github.com/tylrcc/llmfit"
Issues = "https://github.com/tylrcc/llmfit/issues"

[project.scripts]
llmfit = "llmfit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["llmfit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
